Update PdfController.java